--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     ],
     "repository": {
         "type": "git",
-        "url": ""
+        "url": "https://github.com/booshja/happy-harmony"
     },
     "author": {
         "name": "Jacob Andes",
@@ -26,18 +26,22 @@
         "start": "next start",
         "lint": "next lint",
         "test": "jest",
-        "test:watch": "jest --watch"
+        "test:watch": "jest --watch",
+        "prepare": "husky"
     },
     "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.1",
+        "@eslint/js": "^9.32.0",
         "next": "15.4.4",
         "next-plausible": "^3.12.4",
         "react": "19.1.0",
         "react-dom": "19.1.0",
-        "styled-components": "^6.1.19",
         "zod": "^4.0.10",
         "zustand": "^5.0.6"
     },
     "devDependencies": {
+        "@emotion/jest": "^11.13.0",
         "@eslint/eslintrc": "^3.3.1",
         "@testing-library/jest-dom": "^6.6.4",
         "@testing-library/react": "^16.3.0",
@@ -47,9 +51,29 @@
         "eslint": "^9.32.0",
         "eslint-config-next": "15.4.4",
         "eslint-config-prettier": "^10.1.8",
+        "eslint-import-resolver-typescript": "^4.4.4",
+        "eslint-plugin-import": "^2.32.0",
+        "eslint-plugin-jest": "^29.0.1",
+        "eslint-plugin-jsx-a11y": "^6.10.2",
+        "eslint-plugin-react": "^7.37.5",
+        "eslint-plugin-react-hooks": "^5.2.0",
+        "eslint-plugin-typescript-sort-keys": "^3.3.0",
+        "eslint-plugin-unused-imports": "^4.1.4",
+        "globals": "^16.3.0",
+        "husky": "^9.1.7",
         "jest": "^30.0.5",
-        "jest-styled-components": "^7.2.0",
+        "lint-staged": "^16.1.2",
         "prettier": "^3.6.2",
-        "typescript": "^5.8.3"
+        "typescript": "^5.8.3",
+        "typescript-eslint": "^8.38.0"
+    },
+    "lint-staged": {
+        "*.{js,jsx,ts,tsx}": [
+            "eslint --fix",
+            "prettier --write"
+        ],
+        "*.{css,scss,md}": [
+            "prettier --write"
+        ]
     }
 }
