--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,12 @@
             "@/mocks/*": ["./src/testing/__mocks__/*"]
         }
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+    "include": [
+        "next-env.d.ts",
+        "**/*.ts",
+        "**/*.tsx",
+        ".next/types/**/*.ts",
+        "eslint.config.mjs"
+    ],
     "exclude": ["node_modules"]
 }
